--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,11 +9,6 @@ readme = "README.md"
 python = "3.11.3"
 maturin = "^1.1.0"
 numpy = "^1.26.0"
-
-[build-system]
-requires = ["maturin>=1.0,<2.0"]
-build-backend = "maturin"
-
-[tool.maturin]
-python-source = "python"
-module-name = "cna_mixture.core"
+matplotlib = "*"
+scipy = "*"
+scikit-learn = "*"
