--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,15 +2,17 @@
 name = "cna_mixture"
 version = "0.1.0"
 description = ""
-authors = ["M. J. Wilson"]
 readme = "README.md"
+authors = ["M. J. Wilson <mjwilson@princeton.edu>"]
 packages = [
     { include = "cna_mixture", from = "python" },
 ]
 
+[tool.poetry.scripts]
+run_cna_mixture = 'cna_mixture.scripts:main'
+
 [tool.poetry.dependencies]
 python = "3.12.2"
-maturin = "^1.1.0"
 numpy = "^1.26.0"
 matplotlib = "*"
 scipy = "*"
@@ -19,6 +21,3 @@ scikit-learn = "*"
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
-
-# [project.scripts]
-# run_cna_mixture = 'cna_mixture.scripts:main'
