--- a/cna-mixture-rs/Cargo.toml
+++ b/cna-mixture-rs/Cargo.toml
@@ -13,6 +13,8 @@ rayon = "*"
 numpy = { version = "*" }
 pyo3 = { version = "0.19.0", features = ["extension-module"] }
 ndarray = {version = "*", features = ["rayon"] }
+once_cell = "1.10"
+num_cpus = "1.0"
 rand = "0.8.5"
 ordered-float = "2.10.0"
 GSL = "*"
