--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,8 @@ maturin = "^1.1.0"
 matplotlib = "*"
 scipy = "*"
 scikit-learn = "*"
+# torch = "^1.10.0"
+
 
 [tool.poetry.scripts]
 run_cna_mixture = 'cna_mixture.scripts.run_cna_mixture:main'
