--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ maturin = "^1.1.0"
 matplotlib = "*"
 scipy = "*"
 scikit-learn = "*"
+pytest = "^8.3.5"
 
 [tool.poetry.scripts]
 run_model = 'cna_mixture.scripts.run_model:main'
