--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,3 +23,12 @@ run_model = 'cna_mixture.scripts.run_model:main'
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.pytest.ini_options]
+minversion = "6.0"
+addopts = ["-ra -q", "--showlocals", "--strict-markers", "--strict-config"]
+xfail_strict = false
+filterwarnings = ["error"]
+testpaths = [
+    "tests",
+]
