--- a/cna-mixture-rs/Cargo.toml
+++ b/cna-mixture-rs/Cargo.toml
@@ -12,7 +12,7 @@ statrs = "*"
 rayon = "*"
 numpy = { version = "*" }
 pyo3 = { version = "0.19.0", features = ["extension-module"] }
-ndarray = {version = "*", features = ["rayon"] }
+ndarray = {version = "0.15", features = ["rayon"] }
 once_cell = "1.10"
 num_cpus = "1.0"
 rand = "0.8.5"
