--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,6 +12,8 @@ dependencies = [
     "scikit-learn",
     "pytest>=8.3.5,<9",
     "ruff>=0.9.9,<0.10",
+    "black>=25.1.0",
+    "maturin>=1.8.3",
 ]
 
 [project.scripts]
