--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ dependencies = [
     "ruff>=0.9.9,<0.10",
     "black>=25.1.0",
     "maturin>=1.8.3",
+    "numba>=0.61.0",
 ]
 
 [project.scripts]
