--- a/pytest.ini
+++ b/pytest.ini
@@ -2,3 +2,9 @@
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
     regression: marks tests as ensuring that meet a previous test result (deselect with '-m "not regression"')
+
+minversion = 6.0
+addopts = "-ra -q -m 'not slow'"
+testpaths =
+    tests
+    integration
