--- a/pytest.ini
+++ b/pytest.ini
@@ -1,7 +1,7 @@
 [pytest]
 markers =
     slow: marks tests as slow (deselect with '-m "not slow"')
-    regression: marks tests as ensuring that meet a previous test result (deselect with '-m "not regression"')
+    regression: marks tests as ensuring that meet a previous benchmark
 
 minversion = 6.0
 addopts = "-ra -q -m 'not slow'"
