--- a/pyproject.toml
+++ b/pyproject.toml
@@ -79,7 +79,6 @@ unfixable = [
 ]
 isort.required-imports = ["from __future__ import annotations"]
 
-
 [tool.ruff.lint.per-file-ignores]
-"tests/**" = ["T20"]
+"tests/**" = ["ALL"]
 "python/cna_mixture/sandbox/**" = ["ALL"]
